[tool.poetry]
name = "pyresparser"
version = "0.1.0"
description = ""
authors = ["bao1018 <bao1018@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
blis = "0.7.9"
attrs = "^23.1.0"
certifi = "^2023.11.17"
chardet = "^5.2.0"
cymem = "^2.0.8"
docx2txt = "^0.8"
idna = "^3.4"
jsonschema = "^4.20.0"
murmurhash = "^1.0.10"
nltk = "^3.8.1"
numpy = "^1.26.2"
pandas = "^2.1.3"
pdfminer-six = "^20221105"
plac = "^1.4.1"
preshed = "^3.0.9"
pycryptodome = "^3.19.0"
pyrsistent = "^0.20.0"
python-dateutil = "^2.8.2"
pytz = "^2023.3.post1"
requests = "^2.31.0"
six = "^1.16.0"
sortedcontainers = "^2.4.0"
spacy = "^3.7.2"
srsly = "^2.4.8"
thinc = "^8.2.1"
tqdm = "^4.66.1"
urllib3 = "^2.1.0"
wasabi = "^1.1.2"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
